--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
       </div>
       <div class="hero-img">
         <div class="blob">
-          <img src="your-photo.jpg" alt="Yuvaraj Portrait" />
+          <img src="your-photo.JPG" alt="Yuvaraj Portrait" />
         </div>
       </div>
     </div>
