--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
           <span></span>
         </div>
     
-        <nav class="nav-links" id="navLinks">
+        <nav class="nav-links" id="nav-links">
           <a href="#home" class="active">Home</a>
           <a href="#about">About</a>
           <a href="#skills">Skills</a>
